Fix product gallery thumbnail alignment

--- a/src/postcss/woocommerce/single-product.css
+++ b/src/postcss/woocommerce/single-product.css
@@ -74,7 +74,7 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin-top: 10px;
 
     & li {
